# LineSuperCover

./: CMakeLists.txt  README.md  linesupercover.cpp  linesupercover.h
tests/: CMakeLists.txt  common.h  corner.cpp  horizontal.cpp  rise.cpp  run.cpp  segment.cpp  steady.cpp  vertical.cpp
